--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,19 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-   
   </head>
 
   <body>
+      <%if current_user %>
+        <br><br>
+        <%=link_to "All Projects", projects_path %>
+        <%=link_to "New Project", new_project_path %>
+        <%=link_to "My Projects", user_projects_path(current_user) %>
+        <%= button_to "Log Out", logout_path, method: :post %>
+      <%else%>
+        <%= link_to "Log In", login_path %>
+        <%= link_to "Sign Up", signup_path %>
+      <%end%>
     <%= yield %>
   </body>
 </html>
