--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <body>
       <%if current_user %>
         <br><br>
+        <%=link_to "My Profile", user_path(current_user) %>
         <%=link_to "All Projects", projects_path %>
         <%=link_to "New Project", new_project_path %>
         <%=link_to "My Projects", user_projects_path(current_user) %>
