--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,4 @@
-<h1>All Projects</h1>
+<h1>Projects .Index</h1>
 <% @projects.each do |project|%>
   <li><%=link_to(project.name, project_path(project))%></li>
 <%end%>
