--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,13 +1,17 @@
 <%=form_for(@project) do |f|%>
-    <%=f.label("Project Name:") %>
-    <%=f.text_field(:name) %>
+    <%=f.label("Project Name:")%>
+    <%=f.text_field(:name)%>
     <br>
-    <%=f.label("Tasks") %>
+    <%=f.label("Project Description:")%>
+    <%=f.text_field(:project_description)%>
+    <br>
+    <br>
+    <br>
+    <%=f.label("Task") %>
     <%=f.fields_for :tasks do |t| %>    
         <%=t.label "Description" %>
-        <%=t.text_field :description%>
-        <br>
-        <%=t.label "Priority (1-4, 1 being Highest)"%>
+        <%=t.text_field :task_description%>
+        <%=t.label "Priority"%>
         <%=t.number_field :priority%>
     <%end%>
     <br>
