--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,5 @@
-<h1>Projects .Index</h1>
+<h1>Projects Index</h1>
 <% @projects.each do |project|%>
   <li><%=link_to(project.name, project_path(project))%></li>
 <%end%>
 
-<%=link_to "New Project", new_project_path %>
