--- a/app/views/users/_profile.erb
+++ b/app/views/users/_profile.erb
@@ -1,3 +1,3 @@
-<h3> Expertise: <%= @user.expertise %> </h3>
+<h3> Role: <%= @user.expertise %> </h3>
 
-<%=link_to "Edit My Expertise", edit_user_path(@user)%>
+<%=link_to "Edit My Role", edit_user_path(@user)%>
