--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,8 +3,9 @@
 <%=link_to "Edit Project", edit_project_path(@project)%><br><br>
 
 <% @project.tasks.each do |t| %>
-    <li><%= t.task_description %> //// Priority: <%= t.priority %> </li>
+    <li><%= t.task_description %> // Priority: <%= t.priority %> </li>
 <%end%>
+
 
 <br>
 
