--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -4,8 +4,16 @@
 
 
 <% @project.tasks.each do |t| %>
-    <li><%= t.task_description %> // Priority: <%= t.priority %> // Assigned To: <%= User.find_by(id: "#{t.assigned}").username %> </li>
+    <li><%= t.task_description %> // Priority: <%= t.priority %> // Assigned To: <%= User.find_by(id: "#{t.assigned}").username %> // 
+        <% if (t.task_status == nil)  %>
+            <%=check_box_tag 'incomplete' %>
+        <% else %>
+            <%=check_box_tag 'complete', 'yes', true, disabled:true %> 
+        <%end%>  
+    </li>
 <%end%>
+
+
 
 <br>
 
