--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -15,15 +15,16 @@
     <%end%>
 <%end%>
 
-
 <h3> New Task: </h3>
     <%= form_for(@task, url: form_url_helper(@project)) do |f|%>
         <%=f.label "Description"%>
         <%=f.text_field(:task_description)%>
         <%=f.label "Priority"%>
         <%=f.number_field(:priority)%>
-    
-    
+        <%=f.label "Assigned To:" %>
+        <%=f.select :assigned, User.all.collect { |p| [p.username, p.id] },
+        :include_blank => true %>
+
     <%if !@project%>
         <%=f.label "Project"%>
         <%=f.collection_select(:project_id, @projects, :id, :name) %>
