--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,17 +10,29 @@
   </head>
 
   <body>
-      <%if current_user %>
-        <br><br>
-        <%=link_to "My Profile", user_path(current_user) %>
-        <%=link_to "All Projects", projects_path %>
-        <%=link_to "New Project", new_project_path %>
-        <%=link_to "My Projects", user_projects_path(current_user) %>
-        <%= button_to "Log Out", logout_path, method: :post %>
-      <%else%>
-        <%= link_to "Log In", login_path %>
-        <%= link_to "Sign Up", signup_path %>
-      <%end%>
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #f63e00;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">✓ TASKTRACKER</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <%if current_user %>
+            <%=link_to "My Profile", user_path(current_user) %>
+            <%=link_to "All Projects", projects_path %>
+            <%=link_to "New Project", new_project_path %>
+            <%=link_to "My Projects", user_projects_path(current_user) %>
+            <%=button_to "Log Out", logout_path, method: :post %>
+          <%else%>
+            <%= button_to "Log In", login_path %>
+            <%= button_to "Sign Up", signup_path %>
+          <%end%>
+        </div>
+      </div>
+    </div>
+  </nav>
+  
     <%= yield %>
   </body>
 </html>
