error handles empty task form

--- a/app/views/users/_profile.erb
+++ b/app/views/users/_profile.erb
@@ -3,6 +3,7 @@
 <br>
 <br>
 <h3> Projects & Tasks I'm Assigned To </h3>
+<h6> Click Icons to Toggle Task Status </h6>
 <% @bool = true%>
 <% Project.all.each do |p| %>
     <% p.tasks.all.each do |t| %>        
