--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,9 +25,10 @@
             <%=link_to "My Projects", user_projects_path(current_user) %>
             <%=button_to "Log Out", logout_path, method: :post %>
           <%else%>
-            <%= button_to "Log In", login_path %>
-            <%= button_to "Sign Up", signup_path %>
+            <%= link_to "Log In", login_path %>
+            <%= link_to "Sign Up", signup_path %>
           <%end%>
+          <%=flash[:message]%>
         </div>
       </div>
     </div>
