--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,6 @@
+<div class="container">
+    <br>
+
 <h2>Sign Up</h2>
 
   <% @errors && @errors.each do |e| %>
@@ -7,6 +10,7 @@
 <%= form_for @user, url: signup_path do |f| %>
   <%=f.label "Username"%>
   <%=f.text_field :username%>
+  <br>
 
   <br>
   <%=f.label "Password"%>
@@ -17,7 +21,9 @@
   <%=f.password_field :password_confirmation %>
   
   <br>
+  <br>
   <%=f.submit "Sign Up"%>
 <%end%>
 
 <%=link_to "Sign Up With Facebook", '/auth/facebook'%>
+</div>
