--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,14 +19,15 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <%if current_user %>
-            <%=link_to "My Profile", user_path(current_user) %>
-            <%=link_to "All Projects", projects_path %>
-            <%=link_to "New Project", new_project_path %>
-            <%=link_to "My Projects", user_projects_path(current_user) %>
+            <%=button_to "My Profile", user_path(current_user), :method => :get %>
+            <%=button_to "All Projects", projects_path, :method => :get %>
+            <%=button_to "New Project", new_project_path, :method => :get %>
+            <%=button_to "My Projects", user_projects_path(current_user), :method => :get %>
+            <%=button_to "My Projects", user_projects_path(current_user), :method => :get %>
             <%=button_to "Log Out", logout_path, method: :post %>
           <%else%>
-            <%= link_to "Log In", login_path %>
-            <%= link_to "Sign Up", signup_path %>
+            <%= button_to "Log In", login_path, :method => :get  %>
+            <%= button_to "Sign Up", signup_path, :method => :get  %>
           <%end%>
           <%=flash[:message]%>
         </div>
